# ipbes-notifier

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ipbes_notifier/: __init__.py  __main__.py  application.py  chat.py  document.py  subscription.py  topic.py  utils.py
